<resources>
    <string name="app_name">Solver Bee</string>
    <string name="input_title_text">Choose Letters</string>
    <string name="required_letter">Required Letter</string>
    <string name="available_letters">Available Letters</string>
    <string name="solve_button_text">Solve!</string>
    <string name="results_title_text">Results</string>
<!--    TODO put this text in an instruction fragment, you need the practice! -->
    <string name="instructions_text">Enter one required letter and at least three available letters. Solver Bee will generate a list of words comprised only of available letters and containing the required letter.</string>
</resources>